--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,92 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+:root {
+  --primary-color: #007af3;
+}
+
+body {
+  background: #f2f2f2;
+  margin: 0;
+  font-family: "Poppins";
+}
+
+.header {
+  background: white;
+  padding: 1em;
+}
+
+.header .logo {
+  text-decoration: none;
+  font-weight: 700;
+  color: black;
+  font-size: 1.2em;
+}
+
+.header .logo span {
+  color: var(--primary-color);
+}
+
+.header nav {
+  display: none;
+}
+
+.header .conatainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-content: space-between;
+}
+
+.header .mobile-menu {
+  cursor: pointer;
+}
+
+a {
+  color: #444444;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+section {
+  padding: 5em 2em;
+}
+
+.hero {
+  text-align: center;
+}
+
+.left-colum .subhead {
+  text-transform: uppercase;
+  font-weight: 700;
+  color: gray;
+  letter-spacing: 0.3em;
+}
+
+.left-colum h1 {
+  font-size: 2.5em;
+  line-height: 1.3em;
+  margin-top: 0.2em;
+}
+
+.left-colum .primary-cta {
+  background: var(--primary-color);
+  color: white;
+  text-decoration: none;
+  padding: 0.6em 1.3em;
+  font-size: 1.4em;
+  border-radius: 5em;
+  font-weight: 700;
+  display: inline-block;
+}
+
+.left-colum .watch-video-cta {
+  display: block;
+  margin-top: 1em;
+}
+
+.left-colum .watch-video-cta img {
+  margin-right: 0.5em;
+}
+/*# sourceMappingURL=main.css.map */
