--- a/fullmain.css
+++ b/fullmain.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 :root {
-  --primary-color: #007AF3;
+  --primary-color: #007af3;
 }
 
 body {
-  background: #F2F2F2;
+  background: #f2f2f2;
   margin: 0;
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
 
 .navbar {
@@ -62,20 +62,20 @@ section {
   text-transform: uppercase;
   font-weight: bold;
   color: gray;
-  letter-spacing: .3em;
+  letter-spacing: 0.3em;
 }
 
 .left-col h1 {
   font-size: 2.5em;
   line-height: 1.3em;
-  margin-top: .2em;
+  margin-top: 0.2em;
 }
 
 .left-col .primary-cta {
   background: var(--primary-color);
   color: white;
   text-decoration: none;
-  padding: .6em 1.3em;
+  padding: 0.6em 1.3em;
   font-size: 1.4em;
   border-radius: 5em;
   font-weight: bold;
@@ -88,7 +88,7 @@ section {
 }
 
 .left-col .watch-video-cta img {
-  margin-right: .5em;
+  margin-right: 0.5em;
 }
 
 .hero-img {
@@ -97,13 +97,13 @@ section {
 }
 
 section.features-section {
-  background: #20272E;
+  background: #20272e;
   color: white;
 }
 
 ul.features-list {
   margin: 0;
-  padding-left: .1em;
+  padding-left: 0.1em;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(19rem, 1fr))[auto-fit];
@@ -118,14 +118,14 @@ ul.features-list li {
 }
 
 ul.features-list li:before {
-  content: '';
+  content: "";
   left: -2em;
   position: absolute;
   width: 20px;
   height: 20px;
   background-image: url("../images/bullet.svg");
   background-size: contain;
-  margin-right: .5em;
+  margin-right: 0.5em;
 }
 
 .features-section img {
@@ -138,7 +138,7 @@ ul.features-list li:before {
 }
 
 .testimonials-section li {
-  background: #006BD6;
+  background: #006bd6;
   text-align: center;
   padding: 2em 1em;
   width: 80%;
@@ -149,7 +149,7 @@ ul.features-list li:before {
 .testimonials-section li img {
   width: 5em;
   height: 5em;
-  border: 5px solid #006BD6;
+  border: 5px solid #006bd6;
   border-radius: 50%;
   margin-top: -4.5em;
 }
@@ -161,14 +161,15 @@ h2 {
 label {
   display: block;
   font-size: 1.2em;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
-input, textarea {
+input,
+textarea {
   width: 100%;
-  padding: .8em;
+  padding: 0.8em;
   margin-bottom: 1em;
-  border-radius: .3em;
+  border-radius: 0.3em;
   border: 1px solid gray;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -183,7 +184,7 @@ input[type="submit"] {
   margin-bottom: 5em;
   border-radius: 5em;
   display: inline-block;
-  padding: .8em 2em;
+  padding: 0.8em 2em;
   width: unset;
   cursor: pointer;
 }
@@ -203,7 +204,7 @@ nav {
   width: 66%;
   right: 0;
   top: 0;
-  background: #20272E;
+  background: #20272e;
   height: 100vh;
   padding: 1em;
 }
@@ -216,7 +217,7 @@ nav li a {
   color: white;
   text-decoration: none;
   display: block;
-  padding: .5em;
+  padding: 0.5em;
   font-size: 1.3em;
   text-align: right;
 }
@@ -227,12 +228,13 @@ nav li a:hover {
 
 .mobile-menu-exit {
   float: right;
-  margin: .5em;
+  margin: 0.5em;
   cursor: pointer;
 }
 
 @media only screen and (min-width: 768px) {
-  .mobile-menu, .mobile-menu-exit {
+  .mobile-menu,
+  .mobile-menu-exit {
     display: none;
   }
   .navbar .container {
@@ -265,7 +267,7 @@ nav li a:hover {
   .navbar nav a {
     color: black;
     font-size: 1em;
-    padding: .1em 1em;
+    padding: 0.1em 1em;
   }
   .navbar nav ul.primary-nav {
     margin: 0;
@@ -278,7 +280,7 @@ nav li a:hover {
     border: 3px solid var(--primary-color);
     font-weight: bold;
     border-radius: 5em;
-    margin-top: -.2em;
+    margin-top: -0.2em;
   }
   .navbar nav li.go-premium-cta a:hover {
     background: var(--primary-color);
@@ -373,7 +375,7 @@ nav li a:hover {
 
 @media only screen and (min-width: 1450px) {
   .features-section:before {
-    content: '';
+    content: "";
     position: absolute;
     width: 10%;
     height: 20em;
@@ -382,7 +384,7 @@ nav li a:hover {
     top: -4em;
   }
   .features-section:after {
-    content: '';
+    content: "";
     position: absolute;
     width: 200px;
     height: 20em;
